[package]
name = "geo-nd-wasm"
version = "0.1.2"
edition = "2021"
readme = "README.md"
authors = ["Gavin J Stark"]
description = "A WASM interface to the geo-nd library"
homepage = "https://github.com/atthecodeface/geo-nd-wasm"
documentation = "https://docs.rs/geo-nd"
keywords = ["geometry", "gamedev", "vector", "quaternion", "simd"]
categories = ["wasm", "graphics", "rendering"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atthecodeface/geo-nd-wasm"

[dependencies.wasm-bindgen]
version = ">=0.2.92"

[dependencies.geo-nd]
version = ">=0.5.2"

[dependencies.web-sys]
features = [
  'console',
]
version = ">=0.3.40"

